fixing div spacing issue on the data.html home link.

--- a/css/data.css
+++ b/css/data.css
@@ -99,7 +99,8 @@ fieldset {
   text-align: center;
 }
 a {
-  font-size: 2em; 
+  font-size: 2em;
+
 }
 #user_form {
   opacity: .85;
@@ -109,7 +110,7 @@ a {
   margin: .25em;
   padding: .5em;
   text-align: center;
-  width: 15%;
+  width: 35%;
   border: white .1em solid;
 }
 #submit {
